gmt (5.1.0-0~1) experimental; urgency=low

  * New upstream major release: build system moved to cmake.
  * Added a new cmake patch with Debian changes to CMake configurations.
  * Removed autotools b-dep and rules.
  * Removed all (obsolete) patches.
  * Moved to current full dh_* auto support.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 27 Nov 2013 13:27:48 +0100

gmt (4.5.11-1) unstable; urgency=low

  * New upstream release for the 4.x series.
  * Added patch gmt_io.c, mgd77header.c and gmt_proj.c to avoid nested comments 
    use while -pedantic mode is enabled.
  * Added patch c++comments to remove C++ style comments in pure C code. This
    is currently deprecated and should be avoided when strict option 
    like -pedantic are used.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 25 Nov 2013 15:57:54 +0100

gmt (4.5.9-1) unstable; urgency=low

  * Added Octave support and an ad-hoc new package for that.
  * Added octave-gmt package for supporting grid files in GNU octave.
  * Revised build-deps.
  * Debhelper level set to 9.
  * Lintian-based cleanups:
      - Fixed debian/changelog for a couple of silly warnings.
      - Added ${misc:Depends} to all pkgs.
  * Revised for Suggestions.
  * Fixed previous changelog for layout and contents.
  * ACK of previous NMUi by Sebastian Ramacher:
  	* debian/patches/eglibc-2.17.patch: Add missing include to fix FTBFS with
      eglibc 2.17. 
    (closes: #701431)
  * New upstream release. 
    (closes: #705022)
  * Patch kfreebsd refreshed to include hurd case instead.
    (closes: #676147)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 16 Mar 2012 14:53:42 +0100

gmt (4.5.7-2) unstable; urgency=low

  * A link moved from gmt to gmt-doc, so conflicting current gmt-doc with
    old gmt.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 16 Mar 2012 14:14:25 +0100

gmt (4.5.7-1) unstable; urgency=low

  * New upstream version with a new compact distribution.
    (closes: #663099)