@@ -1,10 +1,15 @@
 gmt (5.1.0-0~1) experimental; urgency=low
 
   * New upstream major release: build system moved to cmake.
+  * Now following general advice from upstream about packaging as listed 
+    in http://gmt.soest.hawaii.edu/projects/gmt/wiki/PackagingGMT
   * Added a new cmake patch with Debian changes to CMake configurations.
   * Removed autotools b-dep and rules.
   * Removed all (obsolete) patches.
   * Moved to current full dh_* auto support.
+  * Octave/mex stuff now lives in its own repository and should go into 
+    a separate source package. So, dropped octave-gmt ATM.
+  * Updated list of b-d.
 
  -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 27 Nov 2013 13:27:48 +0100
 
